--- a/grid-homepage.css
+++ b/grid-homepage.css
@@ -18,32 +18,40 @@
 }
 
 body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0;
     background-color: var(--color2);
     font-family: "Balsamiq Sans", sans-serif;
 }
 
 .grid-container{
     display: grid;
+    width: 100%;
     height: 100vh;
+    text-align: center;
     color: yellow;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 0.4fr 1.5fr 1.3fr 0.8fr;
+    grid-template-rows: 0.5fr 1.5fr 1fr 0.8fr;
 
     grid-template-areas: "header header header header"
                          "sidebar main main main"
+                         "sidebar texto1 texto1 texto1"
                          "sidebar box1 box2 box3"
+                         "texto2 texto2 texto2 texto2"
                          "box4 box4 box5 box5"
                          "footer footer footer footer";
-
-    grid-gap: 20px;
-    text-align: center;
+    grid-gap: 10px;
 }
 
 header{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px 20px;
+    padding: 20px;
+    margin-bottom: 10px;
     background-color: var(--color1);
     grid-area: header;
 }
@@ -90,68 +98,233 @@ nav ul li a:hover {
 
 }
 
+.sidebar, .box1, .box2, .box3, .box4, .box5 {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-bottom: 20px;
+}
+
 main{
     background-color: var(--color5);
+    display: flex;
+    justify-content: center;
+    margin: 20px 20px 0 20px;
+    padding: 0;
+    border-radius: 20px;  
     grid-area: main;
-    border-radius: 20px;
-    
-    padding: 20px; /* Adiciona espaçamento interno */
-    display: flex; /* Torna o main um contêiner flexível */
-    flex-direction: column; /* Alinha os itens em uma coluna */
-    align-items: center; /* Centraliza os itens horizontalmente */
-    justify-content: center; /* Centraliza os itens verticalmente */
-
 }
-        
+
 .descricao h1{
     font-family: "Baloo Bhaina 2", sans-serif;
     color: var(--color8);
-    text-align: center; /* Centraliza o texto do h1 */
 }
-    
-    
+
 .descricao p{
-    font-family: "Balsamiq Sans", sans-serif;
     color: var(--color4);
-    text-align: center; /* Centraliza o texto dos parágrafos */
+    max-width: 600px; 
+    text-align: justify;
+    font-size: 15px;
+    margin-top: -10px;
+    margin-bottom: 20px;
+}
+
+.texto1 {
+    margin: 0;
+    padding: 0;
+    grid-area: texto1;
+}
+
+.texto1 h1 {
+    font-family: "Baloo Bhaina 2", sans-serif;
+    color: var(--color1);
+    text-align: center;
+    font-size: 25px;
+}
+
+.texto2 {
+    margin: 0;
+    padding: 0;
+
+    grid-area: texto2;
+}
+
+.texto2 h1 {
+    font-family: "Baloo Bhaina 2", sans-serif;
+    color: var(--color3);
+    text-align: center;
+    font-size: 25px;
 }
 
 .sidebar{
-    background-color: purple;
     grid-area: sidebar;
-    border-radius: 20px;    
+}
+
+.sidebar img{
+    width: 110%;
+    height: 80vh;
+    border-radius: 20px;
+    margin-top: 20px;
 }
 
 .box1{
-    background-color: rgb(30, 22, 32);
+    border-radius: 20px;
+    background-color: var(--color4);
+    position: relative;
     grid-area: box1;
-    border-radius: 20px;    
 }
 
-.box2{
-    background-color: rgb(0, 128, 117);
-    grid-area: box2;
-    border-radius: 20px;    
+.box1 img{
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+    height: 130px;
+    object-fit: cover;
+}
 
+.img-texto1{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.img-texto1 h1{
+    color: var(--color7);
+    font-size: 20px;
+    padding-bottom: 5px;
+    text-align: center;
+} 
+
+.img-texto1 p{
+    color: var(--color7);
+    font-size: 15px;
+    text-align: justify;
+} 
+
+.box2{
+    border-radius: 20px;
+    background-color: var(--color4);
+    position: relative;
+    grid-area: box2;
+}
+
+.box2 img{
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+    height: 130px;
+    object-fit: cover;
+}
+
+.img-texto2{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+.img-texto2 h1{
+    color: var(--color7);
+    font-size: 20px;
+    padding-bottom: 5px;
+    text-align: center;
+}
+
+.img-texto2 p{
+    color: var(--color7);
+    font-size: 15px;
+    text-align: justify;
 }
 
 .box3{
-    background-color: rgb(128, 0, 0);
     grid-area: box3;
+}
+
+.box3 img{
+    width: 440px;
+    height: 286px;
     border-radius: 20px;    
 }
 
 .box4{
-    background: rgb(241, 217, 1);
+    background-color: var(--color3);
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    padding: 20px;
+    gap: 20px;    
     grid-area: box4;
-    border-radius: 20px;    
 }
 
-.box5{
-    background: rgb(151, 47, 96);
-    grid-area: box5;
-    border-radius: 20px;    
+.box4 img {
+    width: 100px;
+    height: 100px;
+    align-self: center;
 }
+
+.box4-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box4-content h1{
+    font-family: "Baloo Bhaina 2", sans-serif;
+    color: var(--color7);
+    font-size: 25px;
+    text-align: center;
+    margin: 0; 
+}
+
+.box4-content p{
+    color: var(--color7);
+    font-size: 15px;
+    text-align: left;
+    align-items: center;
+    margin: 0;
+} 
+
+.box5{
+    background-color: var(--color3);
+    display: flex;
+    align-items: center;
+    border-radius: 20px;
+    padding: 20px;
+    gap: 20px;    
+    grid-area: box5;  
+}
+
+.box5 img {
+    width: 100px;
+    height: 100px;
+    align-self: center;
+}
+
+.box5-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box5-content h1{
+    font-family: "Baloo Bhaina 2", sans-serif;
+    color: var(--color7);
+    font-size: 25px;
+    text-align: center;
+    margin: 0; 
+}
+
+.box5-content p{
+    color: var(--color7);
+    font-size: 15px;
+    text-align: left;
+    align-items: center;
+    margin: 0;
+} 
 
 footer{
     background-color: black;
@@ -167,9 +340,11 @@ footer{
         grid-template-areas: "header"
         "sidebar"
         "main"
+        "texto1"
         "box1"
         "box2"
         "box3"
+        "texto2"
         "box4"
         "box5"
         "footer";
